[package]
name = "axum-jwt-session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
axum = { version = "0.6.3", features = ["headers"] }
jsonwebtoken = "8.2.0"
serde = "1.0.152"
