[package]
name = "axum-jwt-session"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
axum = { version = "0.6.3", features = ["headers"] }
jsonwebtoken = "8.2.0"
serde = "1.0.152"

[dev-dependencies]
axum = { version = "0.6.3", features = ["macros", "json"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
